lib/parser/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { Content: peg$parseContent },
        peg$startRuleFunction  = peg$parseContent,

        peg$c0 = [],
        peg$c1 = peg$FAILED,
        peg$c2 = void 0,
        peg$c3 = function(name, attributes) {
          return token({
            type: BLOCK_TYPES.TAG,
            name: name,
            attributes: attributes
          }, line, column);
        },
        peg$c4 = function(start, content, end) {
          if (start.name != end) {
            throw syntaxError("Expected a </" + start.name + "> but </" + end + "> found.", offset, line, column);
          }

          return token({
            type: BLOCK_TYPES.TAG,
            name: start.name,
            attributes: start.attributes,
            content: content
          }, line, column);
        },
        peg$c5 = null,
        peg$c6 = function(start, content, elsif, otherwise, end) {
          if (start.name != end) {
            throw syntaxError("Expected a </" + start.name + "> but </" + end + "> found.", offset, line, column);
          }

          var primaryCondition = token({
            type: BLOCK_TYPES.CONDITION_BRANCH,
            condition: start.condition,
            content: content
          }, line, column);

          var conditions = [primaryCondition].concat(elsif);

          return token({
            type: BLOCK_TYPES.CONDITION,
            name: start.name,
            conditions: conditions,
            otherwise: otherwise
          }, line, column);
        },
        peg$c7 = function(name, attributes) {
          return token({
            type: BLOCK_TYPES.INVALID_TAG,
            name: name,
            attributes: attributes
          }, line, column);
        },
        peg$c8 = function(condition, content) {
          return token({
            type: BLOCK_TYPES.CONDITION_BRANCH,
            condition: condition,
            content: content
          }, line, column);
        },
        peg$c9 = function(content) {
          return token({
            type: BLOCK_TYPES.ALTERNATE_CONDITION_BRANCH,
            content: content
          }, line, column);
        },
        peg$c10 = function(text) {
          return token({
            type: BLOCK_TYPES.TEXT,
            content: text
          }, line, column);
        },
        peg$c11 = function(name, attributes) {
          return {
            name: name,
            attributes: attributes
          };
        },
        peg$c12 = function(name) {
          return name;
        },
        peg$c13 = function(name, condition) {
          return {
            name: name,
            condition: condition[0] || null
          };
        },
        peg$c14 = function(condition) {
          return condition[0] || null;
        },
        peg$c15 = function(c) {
          return token({
            type: BLOCK_TYPES.COMMENT,
            content: c
          }, line, column);
        },
        peg$c16 = function(c) {
          return token({
            type: BLOCK_TYPES.COMMENT,
            content: c
          }, line, COLUMN_ONE);
        },
        peg$c17 = function(content) {
          return token({
            type: BLOCK_TYPES.COMMENT,
            content: content
          }, line, column);
        },
        peg$c18 = function(attrs) { return attrs; },
        peg$c19 = function(expression) { return expression; },
        peg$c20 = function(expression) {
          return token({
            type: ATTRIBUTE_TYPES.EXPRESSION,
            value: expression
          }, line, column);
        },
        peg$c21 = "=",
        peg$c22 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c23 = function(name, value) {
          return token({
            type: ATTRIBUTE_TYPES.PAIR,
            name: name,
            value: value
          }, line, column);
        },
        peg$c24 = function(name) {
          return token({
            type: ATTRIBUTE_TYPES.SINGLE,
            name: name,
            value: null
          }, line, column);
        },
        peg$c25 = /^[a-zA-Z0-9\-_\/:.{}$]/,
        peg$c26 = { type: "class", value: "[a-zA-Z0-9\\-_\\/:.{}$]", description: "[a-zA-Z0-9\\-_\\/:.{}$]" },
        peg$c27 = function(n) {
          if (n.indexOf("$") > 0) {
            throw syntaxError("Unexpected $ in attribute name.", offset, line, column);
          }

          return n;
        },
        peg$c28 = "'",
        peg$c29 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c30 = function(chars) {
          return join(chars);
        },
        peg$c31 = "\"",
        peg$c32 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c33 = "TMPL_",
        peg$c34 = { type: "literal", value: "TMPL_", description: "\"TMPL_\"" },
        peg$c35 = "TMPL_ASSIGN",
        peg$c36 = { type: "literal", value: "TMPL_ASSIGN", description: "\"TMPL_ASSIGN\"" },
        peg$c37 = "TMPL_BREAK",
        peg$c38 = { type: "literal", value: "TMPL_BREAK", description: "\"TMPL_BREAK\"" },
        peg$c39 = "TMPL_CLIENT_TRANS",
        peg$c40 = { type: "literal", value: "TMPL_CLIENT_TRANS", description: "\"TMPL_CLIENT_TRANS\"" },
        peg$c41 = "TMPL_CONFIGURE",
        peg$c42 = { type: "literal", value: "TMPL_CONFIGURE", description: "\"TMPL_CONFIGURE\"" },
        peg$c43 = "TMPL_CONTINUE",
        peg$c44 = { type: "literal", value: "TMPL_CONTINUE", description: "\"TMPL_CONTINUE\"" },
        peg$c45 = "TMPL_INCLUDE",
        peg$c46 = { type: "literal", value: "TMPL_INCLUDE", description: "\"TMPL_INCLUDE\"" },
        peg$c47 = "TMPL_INLINE",
        peg$c48 = { type: "literal", value: "TMPL_INLINE", description: "\"TMPL_INLINE\"" },
        peg$c49 = "TMPL_MARKER",
        peg$c50 = { type: "literal", value: "TMPL_MARKER", description: "\"TMPL_MARKER\"" },
        peg$c51 = "TMPL_STATIC_URL",
        peg$c52 = { type: "literal", value: "TMPL_STATIC_URL", description: "\"TMPL_STATIC_URL\"" },
        peg$c53 = "TMPL_TRANSLIST",
        peg$c54 = { type: "literal", value: "TMPL_TRANSLIST", description: "\"TMPL_TRANSLIST\"" },
        peg$c55 = "TMPL_TRANS",
        peg$c56 = { type: "literal", value: "TMPL_TRANS", description: "\"TMPL_TRANS\"" },
        peg$c57 = "TMPL_URI",
        peg$c58 = { type: "literal", value: "TMPL_URI", description: "\"TMPL_URI\"" },
        peg$c59 = "TMPL_VAR",
        peg$c60 = { type: "literal", value: "TMPL_VAR", description: "\"TMPL_VAR\"" },
        peg$c61 = "TMPL_V",
        peg$c62 = { type: "literal", value: "TMPL_V", description: "\"TMPL_V\"" },
        peg$c63 = "TMPL_BLOCK",
        peg$c64 = { type: "literal", value: "TMPL_BLOCK", description: "\"TMPL_BLOCK\"" },
        peg$c65 = "TMPL_FOR",
        peg$c66 = { type: "literal", value: "TMPL_FOR", description: "\"TMPL_FOR\"" },
        peg$c67 = "TMPL_LOOP",
        peg$c68 = { type: "literal", value: "TMPL_LOOP", description: "\"TMPL_LOOP\"" },
        peg$c69 = "TMPL_SETVAR",
        peg$c70 = { type: "literal", value: "TMPL_SETVAR", description: "\"TMPL_SETVAR\"" },
        peg$c71 = "TMPL_WITH",
        peg$c72 = { type: "literal", value: "TMPL_WITH", description: "\"TMPL_WITH\"" },
        peg$c73 = "TMPL_WS",
        peg$c74 = { type: "literal", value: "TMPL_WS", description: "\"TMPL_WS\"" },
        peg$c75 = "TMPL_IF",
        peg$c76 = { type: "literal", value: "TMPL_IF", description: "\"TMPL_IF\"" },
        peg$c77 = "TMPL_UNLESS",
        peg$c78 = { type: "literal", value: "TMPL_UNLESS", description: "\"TMPL_UNLESS\"" },
        peg$c79 = "TMPL_ELSIF",
        peg$c80 = { type: "literal", value: "TMPL_ELSIF", description: "\"TMPL_ELSIF\"" },
        peg$c81 = "TMPL_ELSE",
        peg$c82 = { type: "literal", value: "TMPL_ELSE", description: "\"TMPL_ELSE\"" },
        peg$c83 = "TMPL_COMMENT",
        peg$c84 = { type: "literal", value: "TMPL_COMMENT", description: "\"TMPL_COMMENT\"" },
        peg$c85 = { type: "other", description: "whitespace control character" },
        peg$c86 = "-",
        peg$c87 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c88 = "~.",
        peg$c89 = { type: "literal", value: "~.", description: "\"~.\"" },
        peg$c90 = "~|",
        peg$c91 = { type: "literal", value: "~|", description: "\"~|\"" },
        peg$c92 = "~",
        peg$c93 = { type: "literal", value: "~", description: "\"~\"" },
        peg$c94 = ".~",
        peg$c95 = { type: "literal", value: ".~", description: "\".~\"" },
        peg$c96 = "|~",
        peg$c97 = { type: "literal", value: "|~", description: "\"|~\"" },
        peg$c98 = /^[a-zA-Z_]/,
        peg$c99 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c100 = { type: "other", description: "whitespace" },
        peg$c101 = "\t",
        peg$c102 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c103 = "\x0B",
        peg$c104 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c105 = "\f",
        peg$c106 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c107 = " ",
        peg$c108 = { type: "literal", value: " ", description: "\" \"" },
        peg$c109 = "\xA0",
        peg$c110 = { type: "literal", value: "\xA0", description: "\"\\xA0\"" },
        peg$c111 = "\uFEFF",
        peg$c112 = { type: "literal", value: "\uFEFF", description: "\"\\uFEFF\"" },
        peg$c113 = /^[ \xA0\u1680\u2000-\u200A\u202F\u205F\u3000]/,
        peg$c114 = { type: "class", value: "[ \\xA0\\u1680\\u2000-\\u200A\\u202F\\u205F\\u3000]", description: "[ \\xA0\\u1680\\u2000-\\u200A\\u202F\\u205F\\u3000]" },
        peg$c115 = "#",
        peg$c116 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c117 = "##",
        peg$c118 = { type: "literal", value: "##", description: "\"##\"" },
        peg$c119 = { type: "any", description: "any character" },
        peg$c120 = { type: "other", description: "end of line" },
        peg$c121 = "\n",
        peg$c122 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c123 = "\r\n",
        peg$c124 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c125 = "\r",
        peg$c126 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c127 = "\u2028",
        peg$c128 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c129 = "\u2029",
        peg$c130 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c131 = "<",
        peg$c132 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c133 = "/",
        peg$c134 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c135 = ">",
        peg$c136 = { type: "literal", value: ">", description: "\">\"" },
        peg$c137 = function() {
            throw syntaxError("Expected a closing bracket.", offset, line, column);
          },
        peg$c138 = "[%",
        peg$c139 = { type: "literal", value: "[%", description: "\"[%\"" },
        peg$c140 = "%]",
        peg$c141 = { type: "literal", value: "%]", description: "\"%]\"" },
        peg$c142 = "\\",
        peg$c143 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c144 = function() { return text(); },
        peg$c145 = function(esc) { return esc; },
        peg$c146 = "b",
        peg$c147 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c148 = function() { return "\b"; },
        peg$c149 = "f",
        peg$c150 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c151 = function() { return "\f"; },
        peg$c152 = "n",
        peg$c153 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c154 = function() { return "\n"; },
        peg$c155 = "r",
        peg$c156 = { type: "literal", value: "r", description: "\"r\"" },
        peg$c157 = function() { return "\r"; },
        peg$c158 = "t",
        peg$c159 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c160 = function() { return "\t"; },
        peg$c161 = "v",
        peg$c162 = { type: "literal", value: "v", description: "\"v\"" },
        peg$c163 = function() { return "\v"; },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parseContent() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseComment();
      if (s1 === peg$FAILED) {
        s1 = peg$parseConditionalTag();
        if (s1 === peg$FAILED) {
          s1 = peg$parseBlockTag();
          if (s1 === peg$FAILED) {
            s1 = peg$parseSingleTag();
            if (s1 === peg$FAILED) {
              s1 = peg$parseInvalidTag();
              if (s1 === peg$FAILED) {
                s1 = peg$parseText();
              }
            }
          }
        }
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseComment();
        if (s1 === peg$FAILED) {
          s1 = peg$parseConditionalTag();
          if (s1 === peg$FAILED) {
            s1 = peg$parseBlockTag();
            if (s1 === peg$FAILED) {
              s1 = peg$parseSingleTag();
              if (s1 === peg$FAILED) {
                s1 = peg$parseInvalidTag();
                if (s1 === peg$FAILED) {
                  s1 = peg$parseText();
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseComment() {
      var s0;

      s0 = peg$parseCommentTag();
      if (s0 === peg$FAILED) {
        s0 = peg$parseFullLineComment();
        if (s0 === peg$FAILED) {
          s0 = peg$parseSingleLineComment();
        }
      }

      return s0;
    }

    function peg$parseSingleTag() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseOpeningBracket();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$currPos;
        s4 = peg$parseSingleTagName();
        if (s4 !== peg$FAILED) {
          s5 = peg$currPos;
          peg$silentFails++;
          s6 = [];
          s7 = peg$parseTagNameCharacter();
          if (s7 !== peg$FAILED) {
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parseTagNameCharacter();
            }
          } else {
            s6 = peg$c1;
          }
          peg$silentFails--;
          if (s6 === peg$FAILED) {
            s5 = peg$c2;
          } else {
            peg$currPos = s5;
            s5 = peg$c1;
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$c1;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$c1;
        }
        if (s3 !== peg$FAILED) {
          s3 = input.substring(s2, peg$currPos);
        }
        s2 = s3;
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseAttributes();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseAttributes();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseClosingBracket();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c3(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseBlockTag() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseStartTag();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseContent();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEndTag();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c4(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseConditionalTag() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseConditionStartTag();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseContent();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseElsIfTag();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseElsIfTag();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseElseTag();
            if (s4 === peg$FAILED) {
              s4 = peg$c5;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseConditionEndTag();
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c6(s1, s2, s3, s4, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseInvalidTag() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseOpeningEndBracket();
      if (s1 === peg$FAILED) {
        s1 = peg$parseOpeningBracket();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseUnknownTagName();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseAttributes();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseAttributes();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseClosingBracket();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c7(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseElsIfTag() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseElsIfStartTag();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseContent();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c8(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseElseTag() {
      var s0, s1, s2;
